Fix: githubRibbon + change BobaOrange color

--- a/_includes/panel.html
+++ b/_includes/panel.html
@@ -4,7 +4,7 @@
   <div id="panel" > 
     {% if site.avatar %}
       {% if site.blog_url %}<a target="_blank" href="{{ site.blog_url }}">{% endif %}
-      <img src="{{ site.url }}{{ site.avatar }}" class="panel_avatar"/>
+      <img src="{{ site.url }}{{ site.avatar }}" class="panel-avatar"/>
       {% if site.blog_url %}</a>{% endif %}
     {% endif %}
 
