--- a/_less/bobafett.less
+++ b/_less/bobafett.less
@@ -21,7 +21,7 @@
 @panel-text-color                 : white;
 @panel-summary-color              : @boba-green-light;
 
-@panel-link-color                 : @boba-gold;
+@panel-link-color                 : @boba-orange;
 @panel-link-color-hover           : @boba-green;
 @panel-nav-color-hover			  : transparent;
 
