--- a/_less/main.less
+++ b/_less/main.less
@@ -59,7 +59,7 @@ td img, th img{
 #panel{
 	color: @panel-text-color;
 	height: 100%;
-	z-index: 9999;
+	z-index: 1000;
 	@media(min-width: @responsive-witdh){
 		position: fixed;
 		left: 0;
@@ -91,7 +91,8 @@ td img, th img{
 		display:none;
 	}
 }
-.panel_avatar{
+
+.panel-avatar{
 	background-color: transparent;
 	background-repeat: no-repeat;
 	background-size: @panel-avatar-size @panel-avatar-size;
@@ -104,7 +105,7 @@ td img, th img{
 	border-radius: 100%;
 	border-radius: 4px solid #e5e5e5;
 }
-a img.panel_avatar{
+a img.panel-avatar{
 	background-color: black;
 	transition : all 600ms ;
 	/*browser specific versions*/
@@ -113,7 +114,7 @@ a img.panel_avatar{
 	-webkit-transition : all 600ms ;
 	-o-transition : all 600ms ;
 }
-a:hover img.panel_avatar{
+a:hover img.panel-avatar{
 	transform:  scale(1.1);
 	-webkit-transform:  scale(1.1);
 	-moz-transform:  scale(1.1);
