--- a/_includes/panel.html
+++ b/_includes/panel.html
@@ -14,9 +14,10 @@
       {% if site.linkedin %}<li><a href="http://fr.linkedin.com/in/{{site.linkedin}}" target="_blank"><i class="fa fa-linkedin-square" target="_blank"></i></a></li>{% endif %}
 
       {% if site.github %}<li><a href="https://github.com/{{site.github}}" target="_blank"><i class="fa fa-github-square" ></i></a></li>{% endif %}
-      {% if site.google %}<li class="noresponsive"><a href="https://plus.google.com/+{{site.google}}" target="_blank"><i class="fa fa-google-plus-square"></i></a></li>{% endif %}
+
       {% if site.twitter %}<li><a href="http://www.twitter.com/{{site.twitter}}" target="_blank"><i class="fa fa-twitter-square"></i></a></li>{% endif %}
-      {% if site.facebook %}<li><a href="https://www.facebook.com/{{site.facebook}}" target="_blank"><i class="fa fa-facebook-square"></i></a></li>{% endif %}
+            {% if site.google %}<li class="noresponsiveMD"><a href="https://plus.google.com/+{{site.google}}" target="_blank"  ><i class="fa fa-google-plus-square"></i></a></li>{% endif %}
+      {% if site.facebook %}<li><a href="https://www.facebook.com/{{site.facebook}}" target="_blank"  class="noresponsiveMD"><i class="fa fa-facebook-square"></i></a></li>{% endif %}
     </ul>
     <div class="panel-summary">{{ site.summary }}</div>
     <nav id="navbar"  role="navigation">
