HotFix: responsive navbar

--- a/_less/main.less
+++ b/_less/main.less
@@ -157,6 +157,10 @@ a:hover img.panel-avatar{
 	@media(max-height: @content-nav-height-to-remove ){
 		display:none;
 	}
+	@media(max-width: @responsive-witdh){
+		display: none;
+
+	}
 }
 #navbar ul{
 	margin-top: 0px;
