--- a/_includes/content/5-educations.html
+++ b/_includes/content/5-educations.html
@@ -3,7 +3,7 @@
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 content-posts content-line">
      {% for post in site.categories.educations %}
       <li>
-        <div class="post-title  col-lg-8 col-md-12 col-sm-12 col-xs-12 "><i class="fa fa-chevron-right"></i> {{ post.title }} {% if post.school %} at {{ post.school }}  {% endif %} <a href="{{ post.url | prepend: site.baseurl }}">Visit</a></div>
+        <div class="post-title  col-lg-8 col-md-12 col-sm-12 col-xs-12 "><i class="fa fa-chevron-right"></i> {{ post.title }} {% if post.school %} at {{ post.school }}  {% endif %}</div>
         {% if post.entrydate and post.outdate %}
         <time class="col-lg-4 col-md-12 col-sm-12 col-xs-12"> {{ post.entrydate }} <span class="italique">to</span> {{ post.outdate }}</time>
         {% endif %}
