--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,14 +3,14 @@ layout: default
 ---
 <div class="post">
 
-  <header class="post-header">
+<!--   <header class="post-header">
     <h1>{{ page.title }}</h1>
     <p class="meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
-  </header>
-
-  <article class="post-content">
+  </header> -->
+  <a href="{{site.url}}">Return to {{site.title}} </a>
+<!--   <article class="post-content">
   This is my Article ! 
   {{ content }}
-  </article>
+  </article> -->
 
 </div>
