--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,16 +1,21 @@
 ---
 layout: default
 ---
+<head>
+	<meta http-equiv="refresh" content="0; {{site.url}}">
+</head>
+<body>
 <div class="post">
 
 <!--   <header class="post-header">
     <h1>{{ page.title }}</h1>
     <p class="meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
   </header> -->
-  <a href="{{site.url}}">Return to {{site.title}} </a>
+  <a href="{{site.url}}">Return to {{site.title}} auto redirection in 2s </a>
 <!--   <article class="post-content">
   This is my Article ! 
   {{ content }}
   </article> -->
 
 </div>
+</body>
