Fix responsive MD

--- a/_less/main.less
+++ b/_less/main.less
@@ -4,11 +4,11 @@
 /*#######################*/
 /*#       GENERAL       #*/
 /*#######################*/
-@responsive-witdh :@screen-sm-min;
+@responsive-witdh :@screen-md-min;
 
 html {
-	height: 100%;
-	width: 100%;
+/*
+*/
 
 	/*overflow: hidden;*/
 }
@@ -134,11 +134,7 @@ a:hover img.panel-avatar{
 	font-size: @panel-socialicon-size;
 
 }
-@media(max-width: @screen-md-min){
-	ul.panel-social li:nth-of-type(1n+5) {
-		display: none;
-	}
-}
+
 .panel-social li {
 	display: inline-block;
 	margin: 0px;
