--- a/css/main.css
+++ b/css/main.css
@@ -27,8 +27,8 @@
 /*#       GENERAL       #*/
 /*#######################*/
 html {
-  height: 100%;
-  width: 100%;
+  /*
+*/
   /*overflow: hidden;*/
 }
 body {
@@ -74,7 +74,7 @@ th img {
   border: 0;
   z-index: 9999;
 }
-@media (max-width: 768px) {
+@media (max-width: 992px) {
   #ribbon {
     position: absolute;
   }
@@ -84,7 +84,7 @@ th img {
   height: 100%;
   z-index: 1000;
 }
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   #panel {
     position: fixed;
     left: 0;
@@ -113,7 +113,7 @@ th img {
   filter: blur(5px);
   opacity: 0.5;
 }
-@media (max-width: 768px) {
+@media (max-width: 992px) {
   .panel-background-image {
     display: none;
   }
@@ -159,11 +159,6 @@ a:hover img.panel-avatar {
   text-align: center;
   font-size: 36px;
 }
-@media (max-width: 992px) {
-  ul.panel-social li:nth-of-type(1n+5) {
-    display: none;
-  }
-}
 .panel-social li {
   display: inline-block;
   margin: 0px;
@@ -175,7 +170,7 @@ a:hover img.panel-avatar {
   color: #1d9722;
   margin-bottom: 10px;
 }
-@media (max-width: 768px) {
+@media (max-width: 992px) {
   .panel-summary {
     margin-bottom: 20px;
   }
@@ -185,7 +180,7 @@ a:hover img.panel-avatar {
     display: none;
   }
 }
-@media (max-width: 768px) {
+@media (max-width: 992px) {
   #navbar {
     display: none;
   }
