U: CSS responsive + README

--- a/_includes/content/7-informations.html
+++ b/_includes/content/7-informations.html
@@ -1,4 +1,4 @@
-  <section  lass="col-lg-12 col-md-12 col-sm-12 col-xs-12"  >
+  <section id="informations" class="col-lg-12 col-md-12 col-sm-12 col-xs-12"  >
   <h2 class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><i class="fa fa-info"></i> Informations</h2>
 
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 content-posts  
@@ -51,4 +51,3 @@ content-list">
   </div>
 
   </section>
-   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="informations" ></div>
