--- a/_includes/content/3-projects.html
+++ b/_includes/content/3-projects.html
@@ -1,5 +1,5 @@
-<section >
-<h2  id="projects" class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><i class="fa fa-wrench"></i> Projects</h2>
+<section id="projects" class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+<h2  class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><i class="fa fa-wrench"></i> Projects</h2>
 <div class="content-posts content-line">
   {% for post in site.categories.projects %}
   <li>
