--- a/css/main.css
+++ b/css/main.css
@@ -81,15 +81,13 @@ th img {
 }
 #panel {
   color: #ffffff;
-  height: 100%;
   z-index: 1000;
+  height: 100%;
+  min-height: 100%;
 }
 @media (min-width: 992px) {
   #panel {
     position: fixed;
-    left: 0;
-    right: 0;
-    width: 25%;
   }
 }
 #panel a {
@@ -220,6 +218,11 @@ a:hover img.panel-avatar {
   color: #000000;
   background-color: #ffffff;
 }
+@media (max-width: 768px) {
+  #content {
+    padding: 0px;
+  }
+}
 #content a {
   color: #73181e;
 }
@@ -232,10 +235,10 @@ a:hover img.panel-avatar {
   display: block;
 }
 #content h2 {
-  padding-top: 50px;
   font: 'HelveticaNeue', 'Helvetica Neue ', Arial, Helvetica, sans-serif;
   font-size: 35px;
   color: #a62a2c;
+  padding: 0px;
   padding-bottom: 10px;
   font-style: bold;
   border-bottom: 1px solid #e5e5e5;
@@ -251,6 +254,11 @@ a:hover img.panel-avatar {
   font-size: 20px;
   padding: 40px;
   font-style: italic;
+}
+@media (max-width: 768px) {
+  .content-quote {
+    padding: 30px;
+  }
 }
 .content-posts {
   min-height: 200px;
@@ -279,6 +287,11 @@ a:hover img.panel-avatar {
   margin-bottom: 10px;
   list-style-type: none;
 }
+@media (max-width: 992px) {
+  .content-posts {
+    padding: 0px;
+  }
+}
 .post-content {
   font-size: 18px;
   padding: 20px;
@@ -286,6 +299,11 @@ a:hover img.panel-avatar {
 .post-title {
   font-size: 22px;
   color: #000000;
+}
+@media (max-width: 768px) {
+  .post-title {
+    font-weight: bold;
+  }
 }
 .content-posts time {
   text-align: right;
@@ -310,9 +328,15 @@ a:hover img.panel-avatar {
   color: #585858;
   font-size: 14px;
 }
+@media (max-width: 768px) {
+  #informations h4 {
+    font-weight: bold;
+  }
+}
 a.content-download-button {
   margin-top: 50px;
   padding: 10px;
+  margin-bottom: 20px;
   width: 300px;
   display: block;
   margin-left: auto;
