Update Kills For sections

--- a/_less/main.less
+++ b/_less/main.less
@@ -260,6 +260,12 @@ a:hover img.panel-avatar{
 
 	text-align: center;
 }
+#skills h3{
+	margin : 10px;
+	text-decoration: underline;
+	text-transform: uppercase;
+	text-align: center;
+}
 .content-skills ul,.content-skills li{
 	padding:0 !important;
 	list-style: none;
