--- a/_includes/content/4-skills.html
+++ b/_includes/content/4-skills.html
@@ -4,15 +4,19 @@
 
   {% if site.skills %}
     {% for skill in site.skills %}
-      <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 content-skills content-list">
-        <h4 > {{ skill.name }}</h4>
-        <ul>
-          {% for values in skill.values %}
-            <li>{{ values }}</li>
-          {% endfor %}
-        </ul>
-      </div>
+      <h3 class="col-lg-12 col-md-12 col-sm-12 col-xs-12 content-skills-title">{{skill.sectionName}}</h3>
+        {% for skill in skill.elements %}
+        <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 content-skills content-list">
+          <h4 > {{ skill.name }}</h4>
+          <ul>
+            {% for values in skill.values %}
+              <li>{{ values }}</li>
+            {% endfor %}
+          </ul>
+        </div>
+      {% endfor %}
     {% endfor %}
+
   {% else %}
     {% for post in site.categories.skills %}
     <li>
