--- a/css/main.css
+++ b/css/main.css
@@ -274,6 +274,12 @@ a:hover img.panel-avatar {
   padding: 0;
   text-align: center;
 }
+#skills h3 {
+  margin: 10px;
+  text-decoration: underline;
+  text-transform: uppercase;
+  text-align: center;
+}
 .content-skills ul,
 .content-skills li {
   padding: 0 !important;
