--- a/_less/main.less
+++ b/_less/main.less
@@ -264,7 +264,10 @@ a:hover img.panel-avatar{
 	margin : 10px;
 	text-decoration: underline;
 	text-transform: uppercase;
+	font-weight: bold;
 	text-align: center;
+	margin-bottom: 20px;
+	margin-top: 20px;
 }
 .content-skills ul,.content-skills li{
 	padding:0 !important;
