--- a/css/main.css
+++ b/css/main.css
@@ -278,7 +278,10 @@ a:hover img.panel-avatar {
   margin: 10px;
   text-decoration: underline;
   text-transform: uppercase;
+  font-weight: bold;
   text-align: center;
+  margin-bottom: 20px;
+  margin-top: 20px;
 }
 .content-skills ul,
 .content-skills li {
