--- a/_less/bobafett.less
+++ b/_less/bobafett.less
@@ -5,6 +5,10 @@
 /*#######################*/
 /*#       GENERAL       #*/
 /*#######################*/
+
+
+
+
 /* -- >links */
 @link-color                       : @boba-red;
 @link-color-hover                 : @boba-orange;
@@ -16,7 +20,9 @@
 /*#######################*/
 /*#        PANEL        #*/
 /*#######################*/
-
+/* --> ressources */
+@avatar-image : "/assets/bobafett.jpg";  /* Need to be local (in assets forlder) */
+@background-image : "/assets/slave_one.png"; /*Need to be local (in assets forlder)*/
 /* --> Colors */
 @panel-text-color                 : white;
 @panel-summary-color              : @boba-green-light;
