--- a/_less/main.less
+++ b/_less/main.less
@@ -87,40 +87,40 @@ td img, th img{
 	-ms-filter: blur(@panel-bg-blur);
 	filter: blur(@panel-bg-blur);	
 	opacity: @panel-bg-opacity;
+	background: url(@background-image);
+	background-size: 100% 100%;
 	@media(max-width: @responsive-witdh){
 		display:none;
 	}
 }
-
 .panel-avatar{
-	background-color: transparent;
+	background-image: url(@avatar-image);
 	background-repeat: no-repeat;
-	background-size: @panel-avatar-size @panel-avatar-size;
-	height: @panel-avatar-size;
-	width:@panel-avatar-size;
+	background-size: 180px 180px;
+	height: 180px;
+	width:180px;
 	margin-top: 50px;
+	/*margin-bottom: 60px;*/
 	margin-right: auto;
 	margin-left: auto;
 	display: block;
 	border-radius: 100%;
 	border-radius: 4px solid #e5e5e5;
+	transition : all 400ms ;
+
+	-moz-transition : all 400ms ;
+	-ms-transition : all 400ms ;
+	-webkit-transition : all 400ms ;
+	-o-transition : all 400ms ;
 }
-a img.panel-avatar{
-	background-color: black;
-	transition : all 600ms ;
-	/*browser specific versions*/
-	-moz-transition : all 600ms ;
-	-ms-transition : all 600ms ;
-	-webkit-transition : all 600ms ;
-	-o-transition : all 600ms ;
-}
-a:hover img.panel-avatar{
+a:hover .panel-avatar{
 	transform:  scale(1.1);
 	-webkit-transform:  scale(1.1);
 	-moz-transform:  scale(1.1);
 	-o-transform:  scale(1.1);
 	-ms-transform:  scale(1.1);
 }
+
 .panel-name{
 	text-align: center;
 	margin-top: 20px;
