--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,9 @@
 /*#######################*/
 /*#        PANEL        #*/
 /*#######################*/
+/* --> ressources */
+/* Need to be local (in assets forlder) */
+/*Need to be local (in assets forlder)*/
 /* --> Colors */
 /* --> background */
 /* --> sizes */
@@ -111,6 +114,8 @@ th img {
   -ms-filter: blur(5px);
   filter: blur(5px);
   opacity: 0.5;
+  background: url("/assets/slave_one.png");
+  background-size: 100% 100%;
 }
 @media (max-width: 992px) {
   .panel-background-image {
@@ -118,28 +123,25 @@ th img {
   }
 }
 .panel-avatar {
-  background-color: transparent;
+  background-image: url("/assets/bobafett.jpg");
   background-repeat: no-repeat;
   background-size: 180px 180px;
   height: 180px;
   width: 180px;
   margin-top: 50px;
+  /*margin-bottom: 60px;*/
   margin-right: auto;
   margin-left: auto;
   display: block;
   border-radius: 100%;
   border-radius: 4px solid #e5e5e5;
+  transition: all 400ms ;
+  -moz-transition: all 400ms ;
+  -ms-transition: all 400ms ;
+  -webkit-transition: all 400ms ;
+  -o-transition: all 400ms ;
 }
-a img.panel-avatar {
-  background-color: black;
-  transition: all 600ms ;
-  /*browser specific versions*/
-  -moz-transition: all 600ms ;
-  -ms-transition: all 600ms ;
-  -webkit-transition: all 600ms ;
-  -o-transition: all 600ms ;
-}
-a:hover img.panel-avatar {
+a:hover .panel-avatar {
   transform: scale(1.1);
   -webkit-transform: scale(1.1);
   -moz-transform: scale(1.1);
