--- a/_includes/panel.html
+++ b/_includes/panel.html
@@ -2,11 +2,15 @@
 
 <div class="col-md-3 col-lg-3 col-sm-12 col-xs-12">
   <div id="panel" > 
-    {% if site.avatar %}
-      {% if site.blog_url %}<a target="_blank" href="{{ site.blog_url }}">{% endif %}
-      <div  class="panel-avatar"></div>
-      {% if site.blog_url %}</a>{% endif %}
+    
+    {% if site.blog_url %}
+      <a target="_blank" href="{{ site.blog_url }}">
     {% endif %}
+    <div  class="panel-avatar"></div>
+    {% if site.blog_url %}
+      </a>
+    {% endif %}
+    
 
     <h1 class="panel-name">{{ site.name  }}</h1>
     <ul class="panel-social">
