--- a/_includes/content/2-experiences.html
+++ b/_includes/content/2-experiences.html
@@ -3,7 +3,7 @@
 <div class="content-posts content-line">
     {% for post in site.categories.experiences %}
     <li class="content-post">
-    <div class="post-title  col-lg-8 col-md-12 col-sm-12 col-xs-12 "><i class="fa fa-chevron-right"></i> {{ post.title }}{% if post.company %}  at {{ post.company }} {% endif %} </div>
+    <div class="post-title  col-lg-8 col-md-12 col-sm-12 col-xs-12 "><i class="fa fa-chevron-right"></i> <strong>{{ post.title }}</strong>{% if post.company %}  at {{ post.company }} {% endif %} </div>
 
     <time class="col-lg-4 col-md-12 col-sm-12 col-xs-12"> {{ post.entrydate }} <span class="italique">to</span> {{ post.outdate }} {% if post.time %} ({{ post.time }}){% endif %}</time>
     <city class="col-lg-12 col-md-12 col-sm-12 col-xs-12"> {% if post.city %} <i class="fa fa-map-marker" ></i> {{ post.city }}{% endif %}</city>
