Create Custom Head File

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,7 +14,9 @@
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-        {% if site.custom-css %}
+
+    {% include bobafett-head.html %}
+    {% if site.custom-css %}
          <link rel="stylesheet" href="{{ "{{site.custom-css}}" | prepend: site.baseurl }}">
     {% else %}
         <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
