U:can customise fonts

--- a/_less/bobafett.less
+++ b/_less/bobafett.less
@@ -15,7 +15,11 @@
 
 /* --> Fonts */
 @font-global                      : 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Arial, Helvetica, sans-serif;
-@font-large                       : 'HelveticaNeue', 'Helvetica Neue ',  Arial, Helvetica, sans-serif;
+@font-panel						  : @font-global;
+@font-content-quote 			  : Georgia, serif;
+@font-content-section-title 	  : @font-global;
+@font-content-post-title		  : @font-global;
+@font-content-post			      : @font-global;
 
 /*#######################*/
 /*#        PANEL        #*/
