--- a/_less/bobafett.less
+++ b/_less/bobafett.less
@@ -48,7 +48,7 @@
 @panel-nav-text-size-hover        : @panel-nav-text-size;
 @panel-nav-text-marginbtm-size    : 8px;
 @panel-avatar-size                : 180px;
-@content-nav-height-to-remove	  : 700px; // @screen-sm-min + 30
+@content-nav-height-to-remove	  : 730px; // @screen-sm-min + 30 (30+/- if custom category)
 /*#######################*/
 /*#       CONTENT       #*/
 /*#######################*/
