--- a/_less/bobafett.less
+++ b/_less/bobafett.less
@@ -60,6 +60,7 @@
 @content-title-text-color         : @boba-red-light;
 @content-post-title-color         : @content-text-color;
 @content-post-info-color          : #818181;
+@content-post-color 			  : #434343;
 @content-link-color               : @link-color;
 @content-link-color-hover         : @link-color-hover;
 @content-title-icon-color         : @content-text-color;
