--- a/_less/main.less
+++ b/_less/main.less
@@ -289,6 +289,8 @@ a:hover .panel-avatar{
 	font-size: @content-post-text-size ;
 	padding: 20px;
 	font-family: @font-content-post;
+	color: @content-post-color;
+
 }
 .post-title{
 	font-family: @font-content-post-title;
