--- a/css/main.css
+++ b/css/main.css
@@ -306,6 +306,7 @@ a:hover .panel-avatar {
   font-size: 18px;
   padding: 20px;
   font-family: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+  color: #434343;
 }
 .post-title {
   font-family: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Arial, Helvetica, sans-serif;
