--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,10 +5,45 @@
     <meta name="description" content="{{site.description}}" />
     <meta name="keywords" content="{{site.metadata | join: ','}}" />
 
-    <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
+    <title>{{ site.title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="{{ site.description }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+
+    <!-- SEO -->
+    {% if site.SEO_GOOGLEPUBLISHER %}
+    <link rel="publisher" href="https://plus.google.com/+{{site.SEO_GOOGLEPUBLISHER}}">
+    {% endif %}
+
+    {% if site.SEO_LOCAL %}
+    <meta property="og:locale" content="en_US">
+    {% endif %}
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="{{site.title}}">
+
+    {% if site.description %}
+    <meta property="og:description" content="{{site.description}}">
+    {% endif %}
+
+
+    <meta property="og:url" content="{{site.url}}">
+    <meta property="og:site_name" content="{{site.title}}">
+    
+    {% if site.SEO_IMAGE %}
+    <meta property="og:image" content="{{site.url}}/assets/logo.png">
+    {% endif %}
+
+    {% if site.SEO_ALEXA_VERIFY_ID %}
+    <meta name="alexaVerifyID" content="P0o240iLC9cMMIPP_j7zc64PURI">
+    {% endif %}
+
+
+    {% if site.SEO_GOOGLE_SITE_VERIFICATION %}
+    <meta name="google-site-verification" content="RRHbbWZS2ouxnM2JcJsWLVFN1Am0TBHMi7ZEYIqXAnE">
+    {% endif %}
+
+    <!-- /SEO -->
+
 
     <link href="{{ site.url }}{{ site.favicon }}" rel="shortcut icon" type="image/x-icon">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
@@ -17,8 +52,8 @@
 
     {% include bobafett-head.html %}
     {% if site.custom-css %}
-         <link rel="stylesheet" href="{{ "{{site.custom-css}}" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "{{site.custom-css}}" | prepend: site.baseurl }}">
     {% else %}
-        <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
     {% endif %}
 </head>
