--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,8 +21,8 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="{{site.title}}">
 
-    {% if site.description %}
-    <meta property="og:description" content="{{site.description}}">
+    {% if site.summary %}
+    <meta property="og:summary" content="{{site.summary}}">
     {% endif %}
 
 
