Fix:open GRaph desctiopn

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,7 +22,7 @@
     <meta property="og:title" content="{{site.title}}">
 
     {% if site.summary %}
-    <meta property="og:summary" content="{{site.summary}}">
+    <meta property="og:description" content="{{site.summary}}">
     {% endif %}
 
 
