--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
 
     <!-- SEO -->
     {% if site.SEO_GOOGLEPUBLISHER %}
-    <link rel="publisher" href="https://plus.google.com/+{{site.SEO_GOOGLEPUBLISHER}}">
+    <link rel="publisher" href="https://plus.google.com/{{site.SEO_GOOGLEPUBLISHER}}">
     {% endif %}
 
     {% if site.SEO_LOCAL %}
