--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,8 +11,8 @@
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
     <!-- SEO -->
-    {% if site.SEO_GOOGLEPUBLISHER %}
-    <link rel="publisher" href="https://plus.google.com/{{site.SEO_GOOGLEPUBLISHER}}">
+    {% if site.SEO_GOOGLE_PUBLISHER %}
+    <link rel="publisher" href="https://plus.google.com/{{site.SEO_GOOGLE_PUBLISHER}}">
     {% endif %}
 
     {% if site.SEO_LOCAL %}
