--- a/css/main.scss
+++ b/css/main.scss
@@ -37,7 +37,7 @@ $font-content-post            : $font-global;
 $avatar-image : "/assets/bobafett.jpg";  /* Need to be local (in assets forlder) */
 $background-image : "/assets/slave_one.png"; /*Need to be local (in assets forlder)*/
 /* --> Colors */
-$panel-text-color                 : white;
+$panel-text-color                 : red;
 $panel-summary-color              : $boba-green-light;
 
 $panel-link-color                 : $boba-orange;
