--- a/_sass/_bobafett-layout.scss
+++ b/_sass/_bobafett-layout.scss
@@ -1,4 +1,5 @@
-@import "bootstrap-variables";
+@import "bootstrap-variables",
+		"github-table";
 /*#######################*/
 /*#       GENERAL       #*/
 /*#######################*/
