--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -35,8 +35,9 @@ Please, keep Léo Derbois's name on your forked site. That's can help me in my f
 </script>
  
 <!--<script type="text/javascript">$('#content').scrollspy({ target: '#navbar' })</script>-->
-<!-- Google Analytics -->
 {% if site.googleAnalyticsID %}
+<!-- Google Analytics -->
+
 <script>
 	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -47,5 +48,9 @@ Please, keep Léo Derbois's name on your forked site. That's can help me in my f
       ga('send', 'pageview');
 
 </script>
-<!-- Google Analytics -->   
+{% endif %}
+
+{% if site.ackeeAnalytics %}
+<!--  Ackee Analytics -->
+<script async data-ackee type='text/javascript' src='{{site.ackeeAnalytics}}'></script>
 {% endif %}
