--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@ Please, keep Léo Derbois's name on your forked site. That's can help me in my f
 -->
 
 <footer class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
-	  © 2014 {{ site.name }}. Based on a <a href="https://github.com/leoderbois/Boba-Fett-Theme-For-Jekyll" target="_blank">theme</a> made by <a href="http://www.leoderbois.com">Léo Derbois</a>.
+	  © {{ site.time | date: '%y' }} {{ site.name }}. Based on a <a href="https://github.com/leoderbois/Boba-Fett-Theme-For-Jekyll" target="_blank">theme</a> made by <a href="http://www.leoderbois.com">Léo Derbois</a>.
 </footer>
 
 <!-- JQuery -->
