--- a/_includes/panel.html
+++ b/_includes/panel.html
@@ -2,12 +2,14 @@
 
 <div class="col-md-3 col-lg-3 col-sm-12 col-xs-12">
   <div id="panel" > 
-    
-    {% if site.blog_url %}
+    {% if site.vcard %}
+    <a href="{{ site.vcard }}">
+
+    {% else if site.blog_url %}
       <a target="_blank" href="{{ site.blog_url }}">
     {% endif %}
     <div  class="panel-avatar"></div>
-    {% if site.blog_url %}
+    {% if site.blog_url or site.vcard %}
       </a>
     {% endif %}
     
